--- a/solution.ipynb
+++ b/solution.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1[['pick','1st_deliver_attempt','2nd_deliver_attempt']] += 8*60*60\n",
+    "df1[['pick','1st_deliver_attempt','2nd_deliver_attempt']] += 8*60*60 #to GMT+8\n",
     "df1[\"pick\"] = pd.to_datetime(df1['pick'],unit='s').dt.date\n",
     "df1['1st_deliver_attempt'] = pd.to_datetime(df1['1st_deliver_attempt'],unit='s').dt.date\n",
     "df1['2nd_deliver_attempt'] = df1['2nd_deliver_attempt'].replace(np.nan,0) \n",
